load-tests/select/deployment/mysql_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  selector:
    matchLabels:
      app: mysql8
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql8
        logs: "true"
    spec:
      containers:
        - name: mysql8
          image: mysql:8.0.22
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init-script
          persistentVolumeClaim:
            claimName: init-script-pvc
        - name: data
          persistentVolumeClaim:
            claimName: mysql-data-pvc
---
## Service
apiVersion: v1
kind: Service
metadata:
  name: mysql8-service
  labels:
    app: mysql8
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: mysql8
---
